case study spacing fixes

--- a/css/casestudy.css
+++ b/css/casestudy.css
@@ -195,6 +195,9 @@ section img {
     padding: 40px;
     min-width: 0px;
   }
+  .section-title {
+    font-size: 16vw;
+  }
 }
 
 @media screen and (max-width: 500px) {
@@ -205,15 +208,13 @@ section img {
     font-size: 1.5rem;
     margin-top: -20px;
   }
-  /* .section-content div {
-    margin-top: 30px;
+  .section-content div {
+    margin-top: 10px;
     padding: 0;
-    max-width: 70%;
   }
-  section img {
-    max-width: 60%;
-    max-height: 40vh;
-  } */
+  .section-title {
+    font-size: 20vw;
+  }
 }
 
 @media screen and (max-width: 420px) {
@@ -224,7 +225,10 @@ section img {
     padding: 20px;
   }
   .section-content {
-    margin: 60px 0px;
+    margin: 100px 0px 80px 0px;
+  }
+  .section-title {
+    font-size: 22vw;
   }
 }
 
